@@ -1,3 +1,10 @@
 # Money Manager
 
 Personal finance manager. Work in progress.
+
+## Running with Java 9
+
+The following options must be added to java command line:
+
+* --add-exports javafx.base/com.sun.javafx.event=controlsfx
+* --add-modules java.xml.bind
